--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.10",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3"
